--- a/template/sass/vars.scss
+++ b/template/sass/vars.scss
@@ -3,3 +3,9 @@ $neonColor: #D76596;//#CC53BD;
 $shadowColor: #232323;
 $textColor: #fff;
 $textActive:$neonColor;
+$maxSideProfileWidth: 300px;
+$colorLike: #66ff33;
+$colorDislike: #ff0000;
+%border-btn{
+
+}
